Password Recovery Layout

--- a/Android-App/app/src/main/res/values/strings.xml
+++ b/Android-App/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="login2">******</string>
     <string name="login3">LOGIN</string>
     <string name="login4">Create Account</string>
+    <string name="login5">Forget Password ?</string>
 
     <!-- Register -->
     <string name="daftar1">Nama Lengkap</string>
@@ -19,4 +20,10 @@
     <string name="daftar4">Password</string>
     <string name="daftar5">DAFTAR</string>
     <string name="daftar6">Login ?</string>
+
+
+    <!-- Recovery Password -->
+    <string name="recovery1">Email</string>
+    <string name="recovery2">Kirim Password</string>
+    <string name="recovery3">Back ?</string>
 </resources>
