--- a/Android-App/app/src/main/res/values/strings.xml
+++ b/Android-App/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="recovery1">Email</string>
     <string name="recovery2">Kirim Password</string>
     <string name="recovery3">Back ?</string>
+
+    <!-- Menu User-->
+    <string name="menuUser1">Home</string>
+    <string name="menuUser2">Laundry</string>
+    <string name="menuUser3">Chat</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
