--- a/Android-App/app/src/main/res/values/strings.xml
+++ b/Android-App/app/src/main/res/values/strings.xml
@@ -31,6 +31,19 @@
     <string name="menuUser1">Home</string>
     <string name="menuUser2">Laundry</string>
     <string name="menuUser3">Chat</string>
+
+    <!-- Single list laundry -->
+    <string name="listLaundry1">Nama Laundry</string>
+    <string name="listLaundry2">Alamat</string>
+    <string name="listLaundry3">Transaksi : 24 kali</string>
+
+    <!-- Home -->
+    <string name="user1">Selamat Datang</string>
+    <string name="user2">Elaundry</string>
+    <string name="user3">Search</string>
+    <string name="user4">Laundry</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
