--- a/Android-App/app/src/main/res/values/strings.xml
+++ b/Android-App/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps_user">MapsActivityUser</string>
 </resources>
